fix: :bug: Fix z-index to paypal button
Se arreglo el bug donde el botón de paypal se superponia al side menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,3 +62,8 @@ body {
 .btn-disabled {
   @apply bg-gray-600 text-white py-2 px-4 rounded transition-all;
 }
+
+
+.index{
+  z-index: -1000!important;
+}
